# astro-apply

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  client.py  houston_schema.py  main.py  pyproject.toml  requirements.txt  settings.py  update-schema.sh
.github/workflows/: feature.yaml  main.yml
astro_apply/: __init__.py  __main__.py  client.py  constants.py
client/: __init__.py  env_vars.py  houston_schema.py  users.py
github/workflows/: prod.workflow.yml
resources/: slowtest.sh
tests/: .env  test_client.py  test_users.py
tests/astro-apply/: test___main__.py  test_client.py
