[tool.poetry]
name = "astro-apply"
version = "0.1.0"
description = "Like `kubectl apply` - but for Astronomer Cloud."
authors = ["solutions <solutions@astronomer.io>"]
readme = "README.md"
repository = "https://github.com/astronomer/astro-apply"
homepage = "https://github.com/astronomer/astro-apply"

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"astro-apply" = "astro_apply.__main__:cli"

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^6.0"
gql = {extras = ["requests"], version = "^3.1.0"}
requests = "^2.27.1"
click = "^8.1.2"
python-dotenv = "^0.20.0"
deepmerge = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-mock = "^3.7.0"
isort = "^5.10.1"
black = "^22.3.0"
pre-commit = "^2.18.1"
pyupgrade = "^2.31.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
